Fix missing movies title

--- a/Movies/Xib/MoviesTableViewCell.xib
+++ b/Movies/Xib/MoviesTableViewCell.xib
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="15505" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="16097" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="15509"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="16087"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
@@ -36,21 +36,21 @@
                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="5J6-hM-WFG">
                         <rect key="frame" x="177" y="0.0" width="237" height="216"/>
                         <subviews>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="TnR-qc-oMb">
-                                <rect key="frame" x="8" y="14" width="221" height="21"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="TnR-qc-oMb">
+                                <rect key="frame" x="8" y="14" width="221" height="20.5"/>
+                                <fontDescription key="fontDescription" type="boldSystem" pointSize="17"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="XrM-yi-0bA">
-                                <rect key="frame" x="8" y="43" width="221" height="21"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <rect key="frame" x="8" y="42.5" width="221" height="17"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="pgc-Zc-7Mh">
-                                <rect key="frame" x="8" y="72" width="221" height="20.5"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="9" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="pgc-Zc-7Mh">
+                                <rect key="frame" x="8" y="67.5" width="221" height="14.5"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="12"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
@@ -62,6 +62,7 @@
                             <constraint firstItem="XrM-yi-0bA" firstAttribute="leading" secondItem="5J6-hM-WFG" secondAttribute="leading" constant="8" id="JQa-Y6-w4w"/>
                             <constraint firstItem="XrM-yi-0bA" firstAttribute="top" secondItem="TnR-qc-oMb" secondAttribute="bottom" constant="8" id="Qia-bd-9kV"/>
                             <constraint firstAttribute="trailing" secondItem="XrM-yi-0bA" secondAttribute="trailing" constant="8" id="Rcm-gL-qdX"/>
+                            <constraint firstAttribute="bottom" relation="greaterThanOrEqual" secondItem="pgc-Zc-7Mh" secondAttribute="bottom" constant="8" id="SZp-XJ-WTW"/>
                             <constraint firstAttribute="trailing" secondItem="TnR-qc-oMb" secondAttribute="trailing" constant="8" id="UfF-p3-dA0"/>
                             <constraint firstItem="TnR-qc-oMb" firstAttribute="leading" secondItem="5J6-hM-WFG" secondAttribute="leading" constant="8" id="WUT-4u-2Bw"/>
                             <constraint firstItem="pgc-Zc-7Mh" firstAttribute="leading" secondItem="5J6-hM-WFG" secondAttribute="leading" constant="8" id="ac3-mE-b21"/>
