--- a/Movies/Storyboard/Movies.storyboard
+++ b/Movies/Storyboard/Movies.storyboard
@@ -16,7 +16,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="FMD-tc-Sp2">
-                                <rect key="frame" x="0.0" y="88" width="414" height="694"/>
+                                <rect key="frame" x="0.0" y="88" width="414" height="731"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                                 <connections>
                                     <outlet property="dataSource" destination="MZY-wY-RCo" id="Rgu-z7-tUs"/>
@@ -42,7 +42,7 @@
                             <constraint firstItem="x68-fl-DBm" firstAttribute="trailing" secondItem="vhy-CZ-BUZ" secondAttribute="trailing" id="QFC-9b-en2"/>
                             <constraint firstItem="x68-fl-DBm" firstAttribute="bottom" secondItem="vhy-CZ-BUZ" secondAttribute="bottom" id="byV-Wv-qj4"/>
                             <constraint firstItem="FMD-tc-Sp2" firstAttribute="leading" secondItem="vhy-CZ-BUZ" secondAttribute="leading" id="dTh-eJ-pUn"/>
-                            <constraint firstItem="x68-fl-DBm" firstAttribute="top" secondItem="FMD-tc-Sp2" secondAttribute="bottom" constant="37" id="gIa-Lv-pAb"/>
+                            <constraint firstItem="x68-fl-DBm" firstAttribute="top" secondItem="FMD-tc-Sp2" secondAttribute="bottom" id="gIa-Lv-pAb"/>
                             <constraint firstItem="x68-fl-DBm" firstAttribute="leading" secondItem="vhy-CZ-BUZ" secondAttribute="leading" id="yCu-mq-vle"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="vhy-CZ-BUZ"/>
@@ -55,13 +55,16 @@
                         </barButtonItem>
                     </navigationItem>
                     <connections>
+                        <outlet property="categoryButton" destination="x68-fl-DBm" id="JZN-Xt-P83"/>
+                        <outlet property="categoryButtonHeightConstraint" destination="KRe-E3-3kT" id="Bup-ld-AHh"/>
+                        <outlet property="favouriteButton" destination="eHh-NY-gAW" id="6hg-7T-ee9"/>
                         <outlet property="moviesListTableView" destination="FMD-tc-Sp2" id="3cX-WK-6aK"/>
                         <segue destination="5bB-tK-xPG" kind="show" identifier="openMoviesDetailPage" id="XUr-w6-NYG"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="fYT-jH-NKj" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1051" y="80"/>
+            <point key="canvasLocation" x="1050.7246376811595" y="79.6875"/>
         </scene>
         <!--Movie Detail View Controller-->
         <scene sceneID="ri0-dt-rY9">
