--- a/Movies/Storyboard/Movies.storyboard
+++ b/Movies/Storyboard/Movies.storyboard
@@ -53,7 +53,7 @@
                     </view>
                     <navigationItem key="navigationItem" id="aQf-pm-jQB">
                         <barButtonItem key="rightBarButtonItem" title="Item" image="fav_active" id="eHh-NY-gAW">
-                            <inset key="imageInsets" minX="0.0" minY="3" maxX="0.0" maxY="0.0"/>
+                            <inset key="imageInsets" minX="0.0" minY="0.0" maxX="0.0" maxY="-10"/>
                             <color key="tintColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                             <connections>
                                 <action selector="fovouriteButtonAction:" destination="MZY-wY-RCo" id="6w7-cP-38x"/>
@@ -98,7 +98,9 @@
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="AYe-eo-9mV"/>
                     </view>
-                    <navigationItem key="navigationItem" id="FaM-za-YnT"/>
+                    <navigationItem key="navigationItem" leftItemsSupplementBackButton="YES" id="FaM-za-YnT">
+                        <barButtonItem key="backBarButtonItem" title=" " id="i9M-1y-veC"/>
+                    </navigationItem>
                     <connections>
                         <outlet property="movieDetailTableView" destination="4SJ-gf-Wvh" id="5A2-ZW-hZz"/>
                     </connections>
