--- a/Movies/Xib/MoviesInformationTableViewCell.xib
+++ b/Movies/Xib/MoviesInformationTableViewCell.xib
@@ -35,35 +35,36 @@
                         <rect key="frame" x="0.0" y="276" width="414" height="161"/>
                         <subviews>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="m3c-gh-aFw">
-                                <rect key="frame" x="8" y="8" width="330" height="27"/>
+                                <rect key="frame" x="8" y="8" width="340" height="43"/>
                                 <fontDescription key="fontDescription" type="boldSystem" pointSize="22"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="bxS-nq-DXL">
-                                <rect key="frame" x="8" y="100" width="398" height="18"/>
+                                <rect key="frame" x="8" y="116" width="398" height="18"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="15"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="a9v-BH-KhC">
-                                <rect key="frame" x="8" y="43" width="398" height="20.5"/>
+                                <rect key="frame" x="8" y="59" width="398" height="20.5"/>
                                 <fontDescription key="fontDescription" type="boldSystem" pointSize="17"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="3P5-7m-JfK">
-                                <rect key="frame" x="8" y="71.5" width="398" height="20.5"/>
+                                <rect key="frame" x="8" y="87.5" width="398" height="20.5"/>
                                 <fontDescription key="fontDescription" type="boldSystem" pointSize="17"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="d2g-9g-aMB">
-                                <rect key="frame" x="360" y="6" width="46" height="30"/>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="d2g-9g-aMB">
+                                <rect key="frame" x="365" y="15" width="28" height="28"/>
                                 <constraints>
-                                    <constraint firstAttribute="width" constant="46" id="QdM-0y-JYM"/>
+                                    <constraint firstAttribute="width" constant="28" id="QdM-0y-JYM"/>
+                                    <constraint firstAttribute="height" constant="28" id="iIv-cz-qKB"/>
                                 </constraints>
-                                <state key="normal" title="Button"/>
+                                <state key="normal" image="fav_active"/>
                                 <connections>
                                     <action selector="favouriteButtonAction:" destination="wrO-Qq-7Gm" eventType="touchUpInside" id="biA-Tl-Ehi"/>
                                 </connections>
@@ -72,13 +73,13 @@
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                         <constraints>
                             <constraint firstAttribute="trailing" secondItem="3P5-7m-JfK" secondAttribute="trailing" constant="8" id="0dZ-ZO-0EU"/>
-                            <constraint firstAttribute="trailing" secondItem="d2g-9g-aMB" secondAttribute="trailing" constant="8" id="4hG-cf-qGm"/>
+                            <constraint firstAttribute="trailing" secondItem="d2g-9g-aMB" secondAttribute="trailing" constant="21" id="4hG-cf-qGm"/>
                             <constraint firstItem="3P5-7m-JfK" firstAttribute="leading" secondItem="C2e-G9-cpd" secondAttribute="leading" constant="8" id="5iK-BS-DDg"/>
                             <constraint firstItem="m3c-gh-aFw" firstAttribute="leading" secondItem="C2e-G9-cpd" secondAttribute="leading" constant="8" id="D1q-ni-sqa"/>
-                            <constraint firstItem="a9v-BH-KhC" firstAttribute="top" secondItem="d2g-9g-aMB" secondAttribute="bottom" constant="7" id="F1V-2a-V0s"/>
+                            <constraint firstItem="a9v-BH-KhC" firstAttribute="top" secondItem="d2g-9g-aMB" secondAttribute="bottom" constant="16" id="F1V-2a-V0s"/>
                             <constraint firstItem="m3c-gh-aFw" firstAttribute="top" secondItem="C2e-G9-cpd" secondAttribute="top" constant="8" id="FzI-i1-KSf"/>
                             <constraint firstAttribute="trailing" secondItem="bxS-nq-DXL" secondAttribute="trailing" constant="8" id="JWy-3A-w81"/>
-                            <constraint firstItem="d2g-9g-aMB" firstAttribute="leading" secondItem="m3c-gh-aFw" secondAttribute="trailing" constant="22" id="N4N-QC-io8"/>
+                            <constraint firstItem="d2g-9g-aMB" firstAttribute="leading" secondItem="m3c-gh-aFw" secondAttribute="trailing" constant="17" id="N4N-QC-io8"/>
                             <constraint firstAttribute="bottom" relation="greaterThanOrEqual" secondItem="bxS-nq-DXL" secondAttribute="bottom" constant="27" id="NMV-6o-irQ"/>
                             <constraint firstItem="a9v-BH-KhC" firstAttribute="top" secondItem="m3c-gh-aFw" secondAttribute="bottom" constant="8" id="Nc1-N5-EFk"/>
                             <constraint firstItem="bxS-nq-DXL" firstAttribute="top" secondItem="3P5-7m-JfK" secondAttribute="bottom" constant="8" id="Nkr-yg-8sz"/>
@@ -86,7 +87,7 @@
                             <constraint firstAttribute="trailing" secondItem="a9v-BH-KhC" secondAttribute="trailing" constant="8" id="e0u-sI-hAg"/>
                             <constraint firstItem="3P5-7m-JfK" firstAttribute="top" secondItem="a9v-BH-KhC" secondAttribute="bottom" constant="8" id="fAu-sJ-3Ee"/>
                             <constraint firstItem="bxS-nq-DXL" firstAttribute="leading" secondItem="C2e-G9-cpd" secondAttribute="leading" constant="8" id="kJl-Ad-LgA"/>
-                            <constraint firstItem="d2g-9g-aMB" firstAttribute="top" secondItem="C2e-G9-cpd" secondAttribute="top" constant="6" id="vVm-ub-tiE"/>
+                            <constraint firstItem="d2g-9g-aMB" firstAttribute="top" secondItem="C2e-G9-cpd" secondAttribute="top" constant="15" id="vVm-ub-tiE"/>
                         </constraints>
                     </view>
                 </subviews>
@@ -112,4 +113,7 @@
             <point key="canvasLocation" x="86.956521739130437" y="152.34375"/>
         </tableViewCell>
     </objects>
+    <resources>
+        <image name="fav_active" width="50" height="45"/>
+    </resources>
 </document>
